style(css): correct spacing of icons

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,13 @@ h1, h2, p {
     max-width: 500px;
 }
 
+img {
+    display: block;
+    margin-top: -25px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .item p {
     display: inline-block;
 }
